# lldap-operator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  index.html  versions.json
.changeset/changesets/: eerily-striving-louse.md  financially-central-pipit.md  infallibly-aboveboard-crake.md
.github/scripts/: generate-redirect.sh  generate-versions-json.sh
.github/workflows/: changeset.yml  ci.yml  deploy-docs.yml  docs.yml  e2e.yml  release.yml
charts/lldap-operator/: Chart.yaml  values.yaml
charts/lldap-operator/crds/: lldap-attribute-schema.yaml  lldap-group.yaml  lldap-membership.yaml  lldap-user.yaml
charts/lldap-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
charts/lldap-resources-operator/: Chart.yaml  values.yaml
charts/lldap-resources-operator/crds/: lldap-group.yaml  lldap-user.yaml
charts/lldap-resources-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
crates/lldap-operator/: Cargo.toml
crates/lldap-operator-client/: Cargo.toml
crates/lldap-operator-crds/: Cargo.toml
crates/lldap-operator-crds/src/: attribute_schema.rs  common.rs  group.rs  lib.rs  membership.rs  user.rs
crates/lldap-operator-crds/tests/: crd_yaml_snapshot.rs
crates/lldap-operator-reconciler/: Cargo.toml
crates/lldap-operator-traits/: Cargo.toml
crates/lldap-operator-traits/src/: attribute.rs  group.rs  lib.rs  membership.rs  password.rs  user.rs
crates/lldap-resources-operator/: Cargo.toml
crates/lldap-resources-operator-client/: Cargo.toml
crates/lldap-resources-operator-crds/: Cargo.toml
crates/lldap-resources-operator-reconciler/: Cargo.toml
crates/lldap-resources-operator-traits/: Cargo.toml
docs/: book.toml
docs/examples/: lldap-attribute-schema.yaml  lldap-group.yaml  lldap-membership.yaml  lldap-user.yaml
docs/src/: SUMMARY.md  architecture.md  configuration.md  development.md  installation.md  introduction.md  multi-instance.md  password-management.md  troubleshooting.md  version-selector.css  version-selector.js
docs/src/crds/: README.md  lldap-attribute-schema.md  lldap-group.md  lldap-membership.md  lldap-user.md
main-branch/: 404.html  architecture.html  configuration.html  development.html  index.html  installation.html  introduction.html  multi-instance.html  password-management.html  print.html  searcher-c2a407aa.js  searchindex-5c4370a1.js  searchindex-eaa41360.js  toc-1c901476.js  toc.html  troubleshooting.html
main-branch/crds/: index.html  lldap-attribute-schema.html  lldap-group.html  lldap-membership.html  lldap-user.html
main-branch/src/: version-selector-0cfdb6d4.js
scripts/: local-dev-setup.sh  tmux-vim-dev-setup
tests/e2e/fixtures/: lldap-credentials.yaml  lldap-deployment.yaml  test-group.yaml  test-user.yaml
