[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/lukidoescode/lldap-resources-operator"
homepage = "https://github.com/lukidoescode/lldap-resources-operator"
authors = ["Lukas Wagner <appdev.lukaswagner@gmail.com>"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[workspace.metadata]

[workspace.metadata.changeset]
commit = true
tags = true
keep-changesets = false
tag-format = "crate-prefixed"
changelog = "per-package"
comparison-links = "auto"
zero-version-behavior = "effective-minor"
base-branch = "main"
none-bump-behavior = "promote-to-patch"
none-bump-promote-message-template = "Internal architectural changes"
commit-title-template = "Release {new-version}"
changes-in-body = true

[[workspace.metadata.changeset.additional-packages]]
name = "lldap-resources-operator-helm-chart"
path = "charts/lldap-resources-operator"
influence = ["charts/lldap-resources-operator/**"]

[workspace.metadata.changeset.additional-packages.manifest]
file-path = "charts/lldap-resources-operator/Chart.yaml"
format = "yaml"
version-field-path = "version"

[[workspace.metadata.changeset.additional-packages.dependencies]]
dependency-name = "lldap-resources-operator"

[workspace.metadata.changeset.additional-packages.dependencies.version-tracking-manifest]
file-path = "charts/lldap-resources-operator/Chart.yaml"
format = "yaml"
version-field-path = "appVersion"

[workspace.dependencies]
# Internal dependencies
lldap-resources-operator-crds = { path = "crates/lldap-resources-operator-crds", version = "0.0.0" }
lldap-resources-operator-traits = { path = "crates/lldap-resources-operator-traits", version = "0.0.0" }
lldap-resources-operator-client = { path = "crates/lldap-resources-operator-client", version = "0.0.0" }
lldap-resources-operator-reconciler = { path = "crates/lldap-resources-operator-reconciler", version = "0.0.0" }

# External dependencies
thiserror = "2.0.18"
