[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
repository = "https://github.com/lukidoescode/lldap-operator"
homepage = "https://github.com/lukidoescode/lldap-operator"
authors = ["Lukas Wagner <appdev.lukaswagner@gmail.com>"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[workspace.metadata]

[workspace.metadata.changeset]
commit = true
tags = true
keep-changesets = false
tag-format = "crate-prefixed"
changelog = "per-package"
comparison-links = "auto"
zero-version-behavior = "effective-minor"
base-branch = "main"
none-bump-behavior = "promote-to-patch"
none-bump-promote-message-template = "Internal architectural changes"
commit-title-template = "Release {new-version}"
changes-in-body = true

[[workspace.metadata.changeset.additional-packages]]
name = "lldap-operator-helm-chart"
path = "charts/lldap-operator"
influence = ["charts/lldap-operator/**"]

[workspace.metadata.changeset.additional-packages.manifest]
file-path = "charts/lldap-operator/Chart.yaml"
format = "yaml"
version-field-path = "version"

[[workspace.metadata.changeset.additional-packages.dependencies]]
dependency-name = "lldap-operator"

[workspace.metadata.changeset.additional-packages.dependencies.version-tracking-manifest]
file-path = "charts/lldap-operator/Chart.yaml"
format = "yaml"
version-field-path = "appVersion"

[workspace.dependencies]
# Internal dependencies
lldap-operator-crds = { path = "crates/lldap-operator-crds", version = "0.0.0" }
lldap-operator-traits = { path = "crates/lldap-operator-traits", version = "0.0.0" }
lldap-operator-client = { path = "crates/lldap-operator-client", version = "0.0.0" }
lldap-operator-reconciler = { path = "crates/lldap-operator-reconciler", version = "0.0.0" }

# External dependencies
k8s-openapi = { version = "0.27", features = ["v1_33", "schemars"] }
kube = { version = "3.1", default-features = false, features = ["derive"] }
schemars = "1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10"
thiserror = "2.0.18"
