[package]
name = "lldap-operator-crds"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CRD type definitions for the lldap resources operator"

[lints]
workspace = true

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[dependencies]
k8s-openapi.workspace = true
kube.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
