[package]
name = "lldap-resources-operator-client"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "GraphQL client for lldap, implementing operator traits"

[lints]
workspace = true

[dependencies]
