[package]
name = "lldap-resources-operator-traits"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Trait definitions for lldap user and group operations"

[lints]
workspace = true

[dependencies]
